.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: timer-production
  name: timer-client
spec:
  selector:
    matchLabels:
      app: timer-client
  replicas: 1
  template:
    metadata:
      labels:
        app: timer-client
    spec:
      containers:
      - name: timer-client
        image: jaskaransarkaria/timer-client:replace_with_git_tag
        ports:
        - containerPort: 5000
        livenessProbe:
          exec:
            command:
            - cat 
            - /usr/src/app/public/build/bundle.js
          initialDelaySeconds: 240
          periodSeconds: 5
