.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timer-client-service
spec:
  selector:
    app: timer-client
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
